[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mohaf"
version = "0.2.0"
description = "A research framework for Multi-Objective Hierarchical Auction Framework (MOHAF) for IoT resource allocation."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [
  { name = "Kushagra Agrawal", email = "kush4409@gmail.com" },
  { name = "Polat Goktas", email = "polat.goktas@gmail.com" },
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "networkx",
  "scipy",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
mohaf = "mohaf.cli:main"

[project.urls]
Homepage = "https://github.com/afrilab/MOHAF-Resource-Allocation/"
"Bug Tracker" = "https://github.com/afrilab/MOHAF-Resource-Allocation/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mohaf*"]
exclude = ["tests*", "examples*", "docs*"]
